--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,17 +11,31 @@ on:
 jobs:
   get-new-tags:
     runs-on: ubuntu-22.04
+    outputs:
+      matrix: ${{ steps.get-new-tags.outputs.matrix }}
     steps:
       - name: Get new tags
-        id: get_new_tags
+        id: get-new-tags
         shell: bash
         run:  |
-          # Get image tags of dind from Docker Hub
-          curl "https://hub.docker.com/v2/namespaces/library/repositories/docker/tags?name=dind&page_size=3" | jq -r '.results[] | .name' > dind-tags.txt
-          
-          cat dind-tags.txt
+          # Get image tags of docker from Docker Hub
+          curl "https://hub.docker.com/v2/namespaces/library/repositories/docker/tags?name=dind&page_size=3" \
+          | jq -r '.results[] | .name' > docker-tags.txt
           
           # Get image tags of hdwlab/docker-with-sshfs from Docker Hub
-          curl "https://hub.docker.com/v2/namespaces/hdwlab/repositories/docker-with-sshfs/tags?page_size=3" | jq -r '.results[] | .name' > docker-with-sshfs-tags.txt
+          curl "https://hub.docker.com/v2/namespaces/hdwlab/repositories/docker-with-sshfs/tags?page_size=3" \
+          | jq -r '.results[] | .name' > docker-with-sshfs-tags.txt
           
-          cat docker-with-sshfs-tags.txt
+          # Get tags that are in docker-tags.txt but not in docker-with-sshfs-tags.txt
+          comm -13 docker-tags.txt docker-with-sshfs-tags.txt > new-tags.txt
+          
+          # Create a matrix of new tags
+          echo "::set-output name=matrix::$(cat new-tags.txt | jq -nRc '[inputs | select(length>0)]')"
+
+  build-images:
+    needs: prepare
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix: ${{fromJson(needs.get-new-tags.outputs.matrix)}}
+    steps:
+      - run: echo "Processing ${{ matrix.element }}"
