--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches:
-      - develop
+      - main
 #  schedule:
 #    - cron: 0 0 * * 1
 
