--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,8 +42,10 @@ jobs:
           
           EOF
           
+          cat new-tags.json
+          
           # Create a matrix of new tags
-          echo "::set-output name=matrix::$(cat new-tags.json)"
+          echo "matrix=$(cat new-tags.json)" >> $GITHUB_OUTPUT
 
   build-images:
     needs: get-new-tags
