--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,4 +53,21 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.get-new-tags.outputs.matrix)}}
     steps:
-      - run: echo "Processing ${{ matrix.tag }}"
+      - run: echo "Building ${{ matrix.tag }}"
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - shell: bash
+        run: |
+          docker buildx build \
+          --push \
+          --platform linux/amd64,linux/arm64 \
+          --build-arg BASE_IMAGE=docker:${{ matrix.tag }} \
+          -t hdwlab/docker-with-sshfs:${{ matrix.tag }} \
+          .
